automatic project update for v9.1.0