@@ -5,8 +5,8 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.springframework.security.oauth2.jwt.Jwt;
@@ -16,7 +16,7 @@ import org.springframework.security.oauth2.jwt.Jwt;
  */
 class AudienceValidatorTest {
 
-    private final AudienceValidator validator = new AudienceValidator(Arrays.asList("api://default"));
+    private final AudienceValidator validator = new AudienceValidator(List.of("api://default"));
 
     @Test
     @SuppressWarnings("unchecked")
