@@ -5,8 +5,8 @@ import io.github.jhipster.sample.security.SecurityUtils;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
@@ -35,7 +35,7 @@ public class OAuth2TestUtil {
         claims.put("sub", TEST_USER_LOGIN);
         claims.put("preferred_username", TEST_USER_LOGIN);
         claims.put("email", "john.doe@jhipster.com");
-        claims.put("roles", Collections.singletonList(AuthoritiesConstants.ADMIN));
+        claims.put("roles", List.of(AuthoritiesConstants.ADMIN));
 
         return authenticationToken(claims);
     }
