@@ -8,8 +8,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import io.github.jhipster.sample.IntegrationTest;
 import io.github.jhipster.sample.security.AuthoritiesConstants;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -50,7 +50,7 @@ class LogoutResourceIT {
     @BeforeEach
     void before() throws Exception {
         claims = new HashMap<>();
-        claims.put("groups", Collections.singletonList(AuthoritiesConstants.USER));
+        claims.put("groups", List.of(AuthoritiesConstants.USER));
         claims.put("sub", 123);
 
         SecurityContextHolder.getContext().setAuthentication(
@@ -65,7 +65,8 @@ class LogoutResourceIT {
     @Test
     void getLogoutInformation() throws Exception {
         final String ORIGIN_URL = "http://localhost:8080";
-        String logoutUrl = this.registrations.findByRegistrationId("oidc")
+        String logoutUrl = this.registrations
+            .findByRegistrationId("oidc")
             .getProviderDetails()
             .getConfigurationMetadata()
             .get("end_session_endpoint")
